<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_my_location"
        android:icon="@drawable/ic_my_location"
        android:title="@string/menu_my_location"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_waypoint_list"
        android:icon="@drawable/ic_list"
        android:title="@string/menu_waypoint_list"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_setup"
        android:icon="@drawable/ic_check"
        android:title="@string/menu_setup"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_clear_home"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import"
        android:icon="@drawable/ic_import"
        android:title="@string/menu_import"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export_json"
        android:icon="@drawable/ic_export"
        android:title="@string/menu_export_json"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export_gpx"
        android:icon="@drawable/ic_export"
        android:title="@string/menu_export_gpx"
        app:showAsAction="never" />

</menu>
