<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/space_l"
    android:paddingBottom="@dimen/space_l">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/space_xl"
        android:paddingEnd="@dimen/space_m">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRoute"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="@string/title_waypoint_list"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:icon="@drawable/ic_list"
            app:iconGravity="end" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSearchNearby"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overpass_search_short"
            app:icon="@drawable/ic_my_location" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdd"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_add_waypoint"
            app:icon="@drawable/ic_add" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/space_xl"
        android:paddingTop="@dimen/space_l"
        android:paddingEnd="@dimen/space_xl"
        android:paddingBottom="@dimen/space_l"
        android:text="@string/waypoint_list_empty"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:visibility="gone" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/listContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </androidx.core.widget.NestedScrollView>

</LinearLayout>
